# estrutura-dados3

./: README.md  etl.py  main.py  pipeline.py  pyproject.toml
