[tool.poetry]
name = "estrutura-dados3"
version = "0.1.0"
description = ""
authors = ["Luiz Costa <lu.costa1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.3"
loguru = "^0.7.3"
sentry-sdk = "^2.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
